--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,8 @@
 [pycodestyle]
 max-line-length = 99999
 max-doc-length = 99999
-ignore = E203
+ignore = E203, E731
+exclude = *.pyi
 
 [pydocstyle]
 convention = pep257
