--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,22 +7,16 @@
     "python.linting.enabled": true,
     "python.linting.flake8Enabled": false,
     "python.linting.ignorePatterns": [
-        ".pytest_cache/*.py",
-        ".pytest_cache/**/*.py",
-        ".vscode/*.py",
-        ".vscode/**/*.py",
-        "__pycache__/*.py",
-        "__pycache__/**/*.py",
-        "dist/*.py",
-        "dist/**/*.py",
-        "*.egg-info/*.py",
-        "*.egg-info/**/*.py",
-        "venv/*.py",
-        "venv/**/*.py",
-        "docs/*.py",
-        "docs/**/*.py",
-        ".badges/*.py",
-        ".badges/**/*.py",
+        "**/node_modules",
+        "*.py",
+        "**/.pytest_cache",
+        "**/.vscode",
+        "**/__pycache__",
+        "dist",
+        "**/.egg-info",
+        ".venv",
+        "docs",
+        ".badges"
     ],
     "python.linting.mypyEnabled": false,
     "python.linting.prospectorEnabled": false,
@@ -130,7 +124,7 @@
     "files.exclude": {
         ".pytest_cache": true,
         "dist": true,
-        "venv": true,
+        ".venv": true,
         ".coverage": true,
         "*/__pycache__": true,
         "**/__pycache__": true,
