--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "hello_world"
 description = "A basic template for a python project"
 readme = "README.md"
-requires-python = ">=3.10"
+requires-python = "~=3.10"
 authors = [ 
     {name = "Alexander Auras", email = "33501357+AlexanderAuras@users.noreply.github.com"}
 ]
@@ -21,19 +21,19 @@ dynamic = ["version", "dependencies"]
 
 [project.optional-dependencies]
 dev = [
-    "pydocstyle",
-    "pycodestyle",
-    "bandit",
-    "pyright",
-    "black",
-    "pytest",
-    "pytest-xdist",
-    "pytest-cov",
-    "sphinx",
-    "toml",
-    "twine",
-    "snakeviz",
-    "defusedxml"
+    "bandit~=1.7.5",
+    "black~=23.3.0",
+    "defusedxml~=0.7.1",
+    "pycodestyle~=2.10.0",
+    "pydocstyle~=6.3.0",
+    "pyright~=1.1.302",
+    "pytest~=7.2.2",
+    "pytest-cov~=4.0.0",
+    "pytest-xdist~=3.2.1",
+    "snakeviz~=2.1.1",
+    "sphinx~=6.1.3",
+    "toml~=0.10.2",
+    "twine~=4.0.2"
 ]
 
 [project.urls]
@@ -47,8 +47,8 @@ dev = [
 
 [build-system]
 requires = [
-    "setuptools>=67.6.0", 
-    "setuptools-scm[toml]>=7.1.0"
+    "setuptools~=67.6.0", 
+    "setuptools-scm[toml]~=7.1.0"
 ]
 build-backend = "setuptools.build_meta"
 
@@ -58,7 +58,19 @@ dependencies = {file = "requirements.txt"}
 [tool.setuptools_scm]
 
 [tool.pyright]
-venvPath = "./venv"
+venvPath = "./.venv"
+exclude = [
+    "**/node_modules",
+    "*.py",
+    "**/.pytest_cache",
+    "**/.vscode",
+    "**/__pycache__",
+    "dist",
+    "**/.egg-info",
+    ".venv",
+    "docs",
+    ".badges"
+]
 typeCheckingMode = "strict"
 useLibraryCodeForTypes = true
 analyzeUnannotatedFunctions = true
